--- a/01.html
+++ b/01.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <li>我家</li>
+        <li>動物</li>
+        <li>很多</li>
+        <li>貓狗</li>
+    </nav>
     
 </body>
 </html>
