--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <nav>
         <ul>
-            <li>我家</li>
-            <li>動物</li>
-            <li>很多</li>
-            <li>貓狗</li>
+            <li class="nav">我家</li>
+            <li class="nav">動物</li>
+            <li class="nav">很多</li>
+            <li class="nav">貓狗</li>
         </ul>
     </nav>
     
