--- a/project/index.html
+++ b/project/index.html
@@ -20,31 +20,31 @@
             <nav>
                 <a href="#"><span data-txt="最新消息">最新消息</span></a>
                 <a href="#"><span data-txt="門市菜單">門市菜單</span></a>
-                <a href="#" class="logo"><img src="/photo/touaki (2).png" alt="logo"></a>
+                <a href="#" class="logo"><img src="photo/touaki (2).png" alt="logo"></a>
                 <a href="#"><span data-txt="咖啡專覽">咖啡專覽</span></a>
                 <a href="#"><span data-txt="常見問題">常見問題</span></a>
             </nav>
             <div class="front-img">
-                <img src="/photo/db.jpg" alt="首頁圖">
+                <img src="photo/db.jpg" alt="首頁圖">
                 <span class="text">We do coffe</span>
             </div>
             <div class="ribbon">
                 <div class="content">
                     <a href="#">
-                        <img src="/photo/member1.png" alt="">會員登入</div>
+                        <img src="photo/member1.png" alt="">會員登入</div>
                     </a>
                 </div>
             <div class="ribbons">
                 <div class="content-rib">
                     <a href="#">
-                        <img src="/photo/datd.png" alt="">立即預約</div>
+                        <img src="photo/datd.png" alt="">立即預約</div>
                     </a>
                 </div>
         </div>
         <div class="contents">
             <div class="menu-a">
                 <a href="#" >
-                    <img src="/photo/Group 217.jpg" alt="菜單">
+                    <img src="photo/Group 217.jpg" alt="菜單">
                 </a>
             </div>
             <div class="about">
@@ -53,19 +53,19 @@
                 <p class="lines">我們會採用不同的烘焙方式和技術來烘焙咖啡豆，以呈現出不同的風味和口感。我們的烘焙師精通各種烘焙技術，以確保每一杯咖啡都能夠達到最佳的品質標準。</p>
             </div>
             <div class="about-img">
-                <img src="/photo/aboutcoffe.png" alt="關於我們">
+                <img src="photo/aboutcoffe.png" alt="關於我們">
             </div>
             </div>   
             <div class="member">
-                <img src="/photo/threecoffe.jpg" alt="會員">
+                <img src="photo/threecoffe.jpg" alt="會員">
                 <div class="member-text">
                     <h3>會員優惠</h3>
                     <p>我們咖啡店提供會員優惠以回饋我們忠實的顧客。</p>
                     <ul class="member-li">
-                        <li><img src="/photo/Group.png" alt="">打95折</li>
-                        <li><img src="/photo/Vector.png" alt="">OOO生日禮</li>
-                        <li><img src="/photo/Vector (1).png" alt="">累績積分</li>
-                        <li><img src="/photo/clarity_calendar-line.png" alt="">優先定位</li>
+                        <li><img src="photo/Group.png" alt="">打95折</li>
+                        <li><img src="photo/Vector.png" alt="">OOO生日禮</li>
+                        <li><img src="photo/Vector (1).png" alt="">累績積分</li>
+                        <li><img src="photo/clarity_calendar-line.png" alt="">優先定位</li>
                     </ul>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                     <h3>用餐環境</h3>
                     <p>環境和氛圍：我們的咖啡店營造出溫馨舒適的環境和氛圍，讓顧客可以放鬆身心受咖啡的美好時刻。無論是獨自一人閱讀書報，還是和朋友家人聚會聊天，我們的咖都是一個理想的場所。</p></div>  
                     <div class="meal-img">
-                        <img src="/photo/cafe-restaurant-.jpg" alt="餐廳">
+                        <img src="photo/cafe-restaurant-.jpg" alt="餐廳">
                     </div>
                 </div>
             </div>  
@@ -108,7 +108,7 @@
                     </a>
                 </div>
                 <div class="time">
-                    <img src="/photo/solar_sun-fog-linear.png" alt="日落">
+                    <img src="photo/solar_sun-fog-linear.png" alt="日落">
                     <p>今日日落時間</p>
                     <p class="time-nb">17:53</p>
                 </div>
@@ -116,15 +116,15 @@
             <div class="footer-logo">
                 <img src="photo/touaki.png" alt="logo">
                 <div class="address">
-                    <div class="logo-map"><img src="/photo/phone.png" alt=""><p>328 桃園市觀音區莊三街8號</p></div>
-                    <div class="logo-phone"><img src="/photo/map.png" alt=""><p>03-1234567</p></div>
+                    <div class="logo-map"><img src="photo/phone.png" alt=""><p>328 桃園市觀音區莊三街8號</p></div>
+                    <div class="logo-phone"><img src="photo/map.png" alt=""><p>03-1234567</p></div>
                     <p>圖片參考網址:https://www.lebrewlife.co/blogs/coffee/70257</p>
                     <p>Copyright © 2024 豆燒咖啡廳WiEdu CO.</p>
                 </div>
                 <div class="account-icon">
-                    <a href="#"><img src="/photo/Vector (4).png" alt="line"></a>
-                    <a href="#"><img src="/photo/Vector (2).png" alt="fb"></a>
-                    <a href="#"><img src="/photo/Vector (3).png" alt="instagram"></a>
+                    <a href="#"><img src="photo/Vector (4).png" alt="line"></a>
+                    <a href="#"><img src="photo/Vector (2).png" alt="fb"></a>
+                    <a href="#"><img src="photo/Vector (3).png" alt="instagram"></a>
                 </div>
             </div>   
         </div>
