--- a/project/news.html
+++ b/project/news.html
@@ -12,23 +12,23 @@
         <nav class="head-nav">
             <a href="#"><span data-txt="最新消息">最新消息</span></a>
             <a href="#"><span data-txt="門市菜單">門市菜單</span></a>
-            <a href="#" class="logo"><img src="/photo/touaki (2).png" alt="logo"></a>
+            <a href="#" class="logo"><img src="photo/touaki (2).png" alt="logo"></a>
             <a href="#"><span data-txt="咖啡專覽">咖啡專覽</span></a>
             <a href="#"><span data-txt="常見問題">常見問題</span></a>
         </nav>
         <div class="news-img">
-            <img src="/photo/7ca42e4ff366cf7e8ce6b150bfb7b2d9.jpg" alt="消息">
+            <img src="photo/7ca42e4ff366cf7e8ce6b150bfb7b2d9.jpg" alt="消息">
         </div>
         <div class="ribbon">
             <div class="content">
                 <a href="#">
-                    <img src="/photo/member1.png" alt="">會員登入</div>
+                    <img src="photo/member1.png" alt="">會員登入</div>
                 </a>
             </div>
         <div class="ribbons">
             <div class="content-rib">
                 <a href="#">
-                    <img src="/photo/datd.png" alt="">立即預約</div>
+                    <img src="photo/datd.png" alt="">立即預約</div>
                 </a>
             </div>
     </div>
