--- a/project/news.html
+++ b/project/news.html
@@ -12,12 +12,13 @@
         <nav class="head-nav">
             <a href="#"><span data-txt="最新消息">最新消息</span></a>
             <a href="#"><span data-txt="門市菜單">門市菜單</span></a>
-            <a href="#" class="logo"><img src="photo/touaki (2).png" alt="logo"></a>
+            <a href="https://rahaydn.github.io/cid101/project/index.html" class="logo"><img src="photo/touaki (2).png" alt="logo"></a>
             <a href="#"><span data-txt="咖啡專覽">咖啡專覽</span></a>
             <a href="#"><span data-txt="常見問題">常見問題</span></a>
         </nav>
         <div class="news-img">
             <img src="photo/7ca42e4ff366cf7e8ce6b150bfb7b2d9.jpg" alt="消息">
+            <span class="txt">最新消息</span>
         </div>
         <div class="ribbon">
             <div class="content">
@@ -35,7 +36,7 @@
     <div>
         <nav class="breadcrumb">
             <ul>
-                <li><a href="#">首頁</a></li>
+                <li><a href="https://rahaydn.github.io/cid101/project/index.html">首頁</a></li>
                 <li><a href="#">最新消息</a> </li> 
             </ul>
         </nav>
