--- a/project/index.html
+++ b/project/index.html
@@ -18,9 +18,9 @@
 <body>
         <div class="head">
             <nav>
-                <a href="#"><span data-txt="最新消息">最新消息</span></a>
+                <a href="https://rahaydn.github.io/cid101/project/news.html"><span data-txt="最新消息">最新消息</span></a>
                 <a href="#"><span data-txt="門市菜單">門市菜單</span></a>
-                <a href="#" class="logo"><img src="photo/touaki (2).png" alt="logo"></a>
+                <a href="https://rahaydn.github.io/cid101/project/index.html" class="logo"><img src="photo/touaki (2).png" alt="logo"></a>
                 <a href="#"><span data-txt="咖啡專覽">咖啡專覽</span></a>
                 <a href="#"><span data-txt="常見問題">常見問題</span></a>
             </nav>
@@ -62,10 +62,10 @@
                     <h3>會員優惠</h3>
                     <p>我們咖啡店提供會員優惠以回饋我們忠實的顧客。</p>
                     <ul class="member-li">
-                        <li><img src="photo/Group.png" alt="">打95折</li>
-                        <li><img src="photo/Vector.png" alt="">OOO生日禮</li>
-                        <li><img src="photo/Vector (1).png" alt="">累績積分</li>
-                        <li><img src="photo/clarity_calendar-line.png" alt="">優先定位</li>
+                        <li><img src="photo/Group.png" alt=""><span>打95折</span></li>
+                        <li><img src="photo/Vector.png" alt=""><span>OOO生日禮</span></li>
+                        <li><img src="photo/Vector (1).png" alt=""><span>累績積分</span></li>
+                        <li><img src="photo/clarity_calendar-line.png" alt=""><span>優先定位</span></li>
                     </ul>
                 </div>
             </div>
