--- a/project/news.html
+++ b/project/news.html
@@ -37,7 +37,7 @@
         <nav class="breadcrumb">
             <ul>
                 <li><a href="https://rahaydn.github.io/cid101/project/index.html">首頁</a></li>
-                <li><a href="#">最新消息</a> </li> 
+                <li><a href="https://rahaydn.github.io/cid101/project/news.html">最新消息</a> </li> 
             </ul>
         </nav>
     </div>
