--- a/project/news.html
+++ b/project/news.html
@@ -79,5 +79,20 @@
                 </a></li>
             </ul>
         </div>
+    </div>
+    <div class="footer-logo">
+        <img src="photo/touaki.png" alt="logo">
+        <div class="address">
+            <div class="logo-map"><img src="photo/phone.png" alt=""><p>328 桃園市觀音區莊三街8號</p></div>
+            <div class="logo-phone"><img src="photo/map.png" alt=""><p>03-1234567</p></div>
+            <p>圖片參考網址:https://www.lebrewlife.co/blogs/coffee/70257</p>
+            <p>Copyright © 2024 豆燒咖啡廳WiEdu CO.</p>
+        </div>
+        <div class="account-icon">
+            <a href="#"><img src="photo/Vector (4).png" alt="line"></a>
+            <a href="#"><img src="photo/Vector (2).png" alt="fb"></a>
+            <a href="#"><img src="photo/Vector (3).png" alt="instagram"></a>
+        </div>
+    </div> 
 </body>
 </html>
