--- a/project/menu.html
+++ b/project/menu.html
@@ -87,9 +87,9 @@
             <h4>起司三明治<span>100</span></h4>
             <p>Cheese Sandwich</p>
             <h3>吐司 TOAST</h3>
-            <h4 class="green">奶酥吐司<span>75</span></h4>
+            <h4 class="latte">奶酥吐司<span>75</span></h4>
             <p>Matcha Latte</p>
-            <h4>巧克力吐司<span>75</span></h4>
+            <h4 class="toast">巧克力吐司<span>75</span></h4>
             <p>Chocolate Toast</p>
         </div>
     </div>
