--- a/project/index.html
+++ b/project/index.html
@@ -19,7 +19,7 @@
         <div class="head">
             <nav>
                 <a href="https://rahaydn.github.io/cid101/project/news.html"><span data-txt="最新消息">最新消息</span></a>
-                <a href="#"><span data-txt="門市菜單">門市菜單</span></a>
+                <a href="https://rahaydn.github.io/cid101/project/menu.html"><span data-txt="門市菜單">門市菜單</span></a>
                 <a href="https://rahaydn.github.io/cid101/project/index.html" class="logo"><img src="photo/touaki (2).png" alt="logo"></a>
                 <a href="#"><span data-txt="咖啡專覽">咖啡專覽</span></a>
                 <a href="#"><span data-txt="常見問題">常見問題</span></a>
@@ -96,7 +96,7 @@
                     </a>
                 </div>
                 <div class="menu-link">
-                    <a href="#">
+                    <a href="https://rahaydn.github.io/cid101/project/menu.html">
                         <i class="fa-solid fa-utensils"></i>
                         <h3>菜單</h3>
                     </a>
