--- a/project/index.html
+++ b/project/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="contents">
             <div class="menu-a">
-                <a href="#" >
+                <a href="https://rahaydn.github.io/cid101/project/menu.html" >
                     <img src="photo/Group 217.jpg" alt="菜單">
                 </a>
             </div>
