--- a/project/index.html
+++ b/project/index.html
@@ -26,7 +26,7 @@
             </nav>
             <div class="front-img">
                 <img src="photo/db.jpg" alt="首頁圖">
-                <span class="text">We do coffe</span>
+                <span class="text">We do coffee</span>
             </div>
             <div class="ribbon">
                 <div class="content">
@@ -43,9 +43,7 @@
         </div>
         <div class="contents">
             <div class="menu-a">
-                <a href="https://rahaydn.github.io/cid101/project/menu.html" >
                     <img src="photo/Group 217.jpg" alt="菜單">
-                </a>
             </div>
             <div class="about">
             <div class="about-text">
