--- a/touaki/index.html
+++ b/touaki/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Condiment&display=swap" rel="stylesheet">
@@ -114,8 +114,8 @@
             <div class="footer-logo">
                 <img src="photo/touaki.png" alt="logo">
                 <div class="address">
-                    <div class="logo-map"><img src="photo/phone.png" alt=""><p>328 桃園市觀音區莊三街8號</p></div>
-                    <div class="logo-phone"><img src="photo/map.png" alt=""><p>03-1234567</p></div>
+                    <div class="logo-map"><img src="photo/map.png" alt=""><p>328 桃園市觀音區莊三街8號</p></div>
+                    <div class="logo-phone"><img src="photo/phone.png" alt=""><p>03-1234567</p></div>
                     <p>圖片參考網址:https://www.lebrewlife.co/blogs/coffee/70257</p>
                     <p>Copyright © 2024 豆燒咖啡廳WiEdu CO.</p>
                 </div>
