--- a/touaki/index.html
+++ b/touaki/index.html
@@ -13,20 +13,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
-
 </head>
 <body>
-        <div class="head">
+    <div class="head">
+        <div class="head-nav">
+            <div class="nav-log"><a href="https://rahaydn.github.io/cid101/project/index.html" class="logo">
+                <img src="photo/touaki (2).png" alt="logo">
+            </a>
+        </div>
             <nav>
-                <a href="https://rahaydn.github.io/cid101/project/news.html"><span data-txt="最新消息">最新消息</span></a>
-                <a href="https://rahaydn.github.io/cid101/project/menu.html"><span data-txt="門市菜單">門市菜單</span></a>
-                <a href="https://rahaydn.github.io/cid101/project/index.html" class="logo"><img src="photo/touaki (2).png" alt="logo"></a>
-                <a href="#"><span data-txt="咖啡專覽">咖啡專覽</span></a>
-                <a href="#"><span data-txt="常見問題">常見問題</span></a>
-            </nav>
+                <ul>
+                    <li><a href="https://rahaydn.github.io/cid101/project/news.html"><span data-txt="最新消息">最新消息</span></a>
+                    </li>
+                    <li><a href="https://rahaydn.github.io/cid101/project/menu.html"><span data-txt="門市菜單">門市菜單</span></a>
+                    </li>
+                    <li><a href="#"><span data-txt="咖啡專覽">咖啡專覽</span></a></li>
+                    <li><a href="#"><span data-txt="常見問題">常見問題</span></a></li>
+                </ul>
+                </nav>
+        </div>
             <div class="front-img">
                 <img src="photo/db.jpg" alt="首頁圖">
-                <span class="text">We do coffee</span>
+                <span class="text">Delicious Coffee Shop</span>
             </div>
             <div class="ribbon">
                 <div class="content">
@@ -41,20 +49,20 @@
                     </a>
                 </div>
         </div>
-        <div class="contents">
-            <div class="menu-a">
+        <div class="main">
+            <section class="menu-a">
                     <img src="photo/Group 217.jpg" alt="菜單">
-            </div>
-            <div class="about">
+            </section>
+            <section class="about">
             <div class="about-text">
                 <h3>關於我們</h3>
                 <p class="lines">我們會採用不同的烘焙方式和技術來烘焙咖啡豆，以呈現出不同的風味和口感。我們的烘焙師精通各種烘焙技術，以確保每一杯咖啡都能夠達到最佳的品質標準。</p>
             </div>
             <div class="about-img">
-                <img src="photo/aboutcoffe.png" alt="關於我們">
+                <img src="photo/Group 178.png" alt="關於我們">
             </div>
-            </div>   
-            <div class="member">
+            </section>   
+            <section class="member">
                 <img src="photo/threecoffe.jpg" alt="會員">
                 <div class="member-text">
                     <h3>會員優惠</h3>
@@ -66,15 +74,15 @@
                         <li><img src="photo/clarity_calendar-line.png" alt=""><span>優先定位</span></li>
                     </ul>
                 </div>
-            </div>
-            <div class="meal">
+            </section>
+            <section class="meal">
                 <div class="meal-text">
                     <h3>用餐環境</h3>
                     <p>環境和氛圍：我們的咖啡店營造出溫馨舒適的環境和氛圍，讓顧客可以放鬆身心受咖啡的美好時刻。無論是獨自一人閱讀書報，還是和朋友家人聚會聊天，我們的咖都是一個理想的場所。</p></div>  
                     <div class="meal-img">
                         <img src="photo/cafe-restaurant-.jpg" alt="餐廳">
                     </div>
-                </div>
+                </section>
             </div>  
             <div class="footer">
                 <div class="opentime">
@@ -114,10 +122,10 @@
             <div class="footer-logo">
                 <img src="photo/touaki.png" alt="logo">
                 <div class="address">
-                    <div class="logo-map"><img src="photo/map.png" alt=""><p>328 桃園市觀音區莊三街8號</p></div>
                     <div class="logo-phone"><img src="photo/phone.png" alt=""><p>03-1234567</p></div>
-                    <p>圖片參考網址:https://www.lebrewlife.co/blogs/coffee/70257</p>
+                    <div class="logo-map"><img src="photo/map.png" alt=""><p>328 桃園市觀音區莊三街8號</p></div>
                     <p>Copyright © 2024 豆燒咖啡廳WiEdu CO.</p>
+                    <p>圖片參考網址:https://www.lebrewlife.co/blogs/coffee/70257</p>
                 </div>
                 <div class="account-icon">
                     <a href="#"><img src="photo/Vector (4).png" alt="line"></a>
