--- a/touaki/index.html
+++ b/touaki/index.html
@@ -19,7 +19,7 @@
         <div class="head-nav">
             <nav>
                 <div class="nav-log"><a href="https://rahaydn.github.io/cid101/project/index.html" class="logo">
-                    <img src="touaki/photo/touaki (2).png" alt="logo"></a>
+                    <img src="photo/touaki (2).png" alt="logo"></a>
                 </div>
                     <ul id="menu">
                         <li><a href="https://rahaydn.github.io/cid101/project/news.html"><span data-txt="最新消息">最新消息</span></a>
