--- a/touaki/index.html
+++ b/touaki/index.html
@@ -71,7 +71,7 @@
             </section>   
             <section class="member">
                 <div class="member-img">
-                    <img src="photo/threecoffe.jpg" alt="會員">
+                    <img src="photo/three.jpg" alt="會員">
                 </div>
                 <div class="member-text">
                     <h2>會員優惠</h2>
