--- a/touaki/menu.html
+++ b/touaki/menu.html
@@ -25,7 +25,7 @@
                     <ul id="menu">
                         <li><a href="https://rahaydn.github.io/cid101/project/news.html"><span data-txt="最新消息">最新消息</span></a>
                         </li>
-                        <li><a href="https://rahaydn.github.io/cid101/project/menu.html"><span data-txt="門市菜單">門市菜單</span></a>
+                        <li><a href="https://rahaydn.github.io/cid101/touaki/menu.html"><span data-txt="門市菜單">門市菜單</span></a>
                         </li>
                         <li><a href="#"><span data-txt="咖啡專覽">咖啡專覽</span></a></li>
                         <li><a href="#"><span data-txt="常見問題">常見問題</span></a></li>
@@ -59,7 +59,7 @@
         <nav class="breadcrumb">
             <ul>
                 <li><a href="https://rahaydn.github.io/cid101/touaki/index.html">首頁</a></li>
-                <li><a href="https://rahaydn.github.io/cid101/project/menu.html">菜單</a> </li> 
+                <li><a href="https://rahaydn.github.io/cid101/touaki/menu.html">菜單</a> </li> 
             </ul>
         </nav>
     <div class="coffee-bg">
